@@ -21,6 +21,7 @@ Released: N/A
   * Fixed the default shader improperly applying gamma correction to per-vertex colors when gamma correction is requested but not supported on OpenGL ES.
   * Fixed text coloring breaking because of an empty string.
   * Fixed large burst of particles when dramatically increasing the emission rate of a ParticleSystem.
+  * Fixed MouseJoint:getBodies unconditionally erroring.
 
   * Improved performance of Channel methods by roughly 2x in many cases.
   
